--- a/res/layout/fragment_buy_details.xml
+++ b/res/layout/fragment_buy_details.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical" >
     
     <FrameLayout 
@@ -15,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="我买到的"
+        android:id="@+id/tvTitle"
         android:textSize="18sp"/>
     
     <View
@@ -28,7 +30,7 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="44dp" >
+        android:layout_marginTop="10dp" >
     </ListView>
    
 </LinearLayout>
