--- a/res/layout/fragment_page_myprofile.xml
+++ b/res/layout/fragment_page_myprofile.xml
@@ -4,5 +4,104 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <com.swqs.schooltrade.AvatarView
+        
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:id="@+id/avatar"
+        android:layout_gravity="center_horizontal"/>
+    
+   <TextView 
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:text="username"
+       android:id="@+id/tvUsername"
+       android:layout_gravity="center_horizontal"/>
+   
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" 
+            android:layout_marginTop="10dp"/>
+    
+    <TextView 
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:text="我发布的"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="5dp"/>
+    
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" 
+            android:layout_marginTop="10dp"/>
+    
+    <TextView 
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:text="我卖出的 "
+       android:id="@+id/tvSelled"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="5dp"/>
+   
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" 
+            android:layout_marginTop="10dp"/>
+    
+    <TextView 
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:text="我买到的 "
+       android:id="@+id/tvBuyed"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="5dp"/>
+    
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" 
+            android:layout_marginTop="10dp"/>
+    
+    <TextView 
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:text="我的收藏 "
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="5dp"/>
+    
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" 
+            android:layout_marginTop="10dp"/>
+    
+    <TextView 
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:text="我的信誉"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="5dp"/>
+    
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" 
+            android:layout_marginTop="10dp"/>
+    
+    <TextView 
+       android:layout_height="wrap_content"
+       android:layout_width="wrap_content"
+       android:text="我的信息"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="5dp"/>
+    
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" 
+            android:layout_marginTop="10dp"/>
     
 </LinearLayout>
