--- a/res/layout/widget_buy_item.xml
+++ b/res/layout/widget_buy_item.xml
@@ -53,6 +53,7 @@
             android:layout_marginTop="40dp"
             android:layout_width="100sp"
             android:layout_height="40sp"
+            android:focusable="false"
             android:textColor="@android:color/black"
             android:text="查看评价" />
         
