完善我的界面部分功能

--- a/res/layout/activity_my_credit.xml
+++ b/res/layout/activity_my_credit.xml
@@ -62,5 +62,14 @@
             android:text="@string/credit3" />
 
     </LinearLayout>
+    
+    <Button 
+        android:id="@+id/btnback"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="280dp"
+        android:text="返回"/>
 
 </LinearLayout>
