--- a/res/layout/activity_money.xml
+++ b/res/layout/activity_money.xml
@@ -49,5 +49,14 @@
             android:text="充值" />
         
     </LinearLayout>
+    
+    <Button 
+        android:id="@+id/btnback"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="280dp"
+        android:text="返回"/>
 
 </LinearLayout>
