--- a/res/layout/activity_new_goods.xml
+++ b/res/layout/activity_new_goods.xml
@@ -10,8 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
+        android:background="#1F5B8D"
         android:gravity="center"
         android:text="发布"
+        android:textColor="@android:color/white"
         android:textSize="20sp" />
 
     <View
@@ -24,12 +26,12 @@
     <EditText
         android:id="@+id/edit_title"
         android:layout_width="match_parent"
-        android:layout_height="31dp"
-        android:background="@android:color/transparent"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/line1"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="@android:color/transparent"
         android:gravity="center_vertical"
         android:hint="标题"
         android:textColor="@android:color/black"
@@ -45,15 +47,15 @@
     <EditText
         android:id="@+id/edit_content"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:background="@android:color/transparent"
+        android:layout_height="150dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/line2"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="@android:color/transparent"
         android:hint="描述一下你的物品或需求"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:paddingBottom="7.5dp"
+        android:paddingTop="7.5dp"
         android:textColor="@android:color/black"
         android:textSize="15sp" />
 
@@ -78,7 +80,7 @@
         android:layout_below="@+id/line4"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        class="com.swqs.schooltrade.fragments.inputcells.ImageInputCellFragment"
+        class="inputcell.ImageInputCellFragment"
         tools:layout="@layout/fragment_inputcell_image" />
 
     <View
@@ -94,60 +96,43 @@
         android:layout_height="1dp"
         android:layout_below="@+id/line5"
         android:background="@android:color/darker_gray" />
-    
+
+    <View
+        android:id="@+id/line7"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_below="@+id/line6"
+        android:background="@android:color/white" />
+
     <TextView
         android:id="@+id/text_originalprice"
         android:layout_width="60dp"
-        android:layout_height="31dp"
-        android:gravity="center"
+        android:layout_height="30dp"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/line6"
+        android:layout_below="@+id/line7"
         android:layout_marginLeft="10dp"
-        android:text="原价："
+        android:gravity="center"
+        android:text="价格："
         android:textSize="15sp" />
-    
+
     <EditText
         android:id="@+id/edit_originalprice"
         android:layout_width="match_parent"
-        android:layout_height="31dp"
-        android:background="@android:color/transparent"
-        android:layout_toRightOf="@+id/text_originalprice"
-        android:layout_below="@+id/line6"
+        android:layout_height="30dp"
+        android:layout_below="@+id/line7"
         android:layout_marginRight="10dp"
+        android:layout_toRightOf="@+id/text_originalprice"
+        android:background="@android:color/transparent"
         android:gravity="center_vertical"
-        android:hint="可选"
         android:textColor="@android:color/black"
         android:textSize="15sp" />
 
-     <TextView
-        android:id="@+id/text_curprice"
-        android:layout_width="60dp"
-        android:layout_height="31dp"
-        android:gravity="center"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/text_originalprice"
-        android:layout_marginLeft="10dp"
-        android:text="现价："
-        android:textSize="15sp" />
-    
-    <EditText
-        android:id="@+id/edit_curprice"
-        android:layout_width="match_parent"
-        android:layout_height="31dp"
-        android:background="@android:color/transparent"
-        android:layout_toRightOf="@+id/text_curprice"
-        android:layout_below="@+id/edit_originalprice"
-        android:layout_marginRight="10dp"
-        android:gravity="center_vertical"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
-    
     <Button
         android:id="@+id/button_publish"
         android:layout_width="120dp"
-        android:layout_height="31dp"
-        android:layout_centerHorizontal="true"
+        android:layout_height="30dp"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
