--- a/res/layout/activity_new_goods.xml
+++ b/res/layout/activity_new_goods.xml
@@ -55,6 +55,7 @@
         android:background="@android:color/transparent"
         android:hint="描述一下你的物品或需求"
         android:paddingBottom="7.5dp"
+        android:gravity="left"
         android:paddingTop="7.5dp"
         android:textColor="@android:color/black"
         android:textSize="15sp" />
