修改app图标以及添加更换头像功能

--- a/res/layout/fragment_page_myprofile.xml
+++ b/res/layout/fragment_page_myprofile.xml
@@ -15,8 +15,10 @@
 
             <com.swqs.schooltrade.util.AvatarView
                 android:id="@+id/avatar"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/ic_launcher"
+                android:layout_margin="20dp"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
