--- a/res/layout/fragment_page_search.xml
+++ b/res/layout/fragment_page_search.xml
@@ -1,8 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical"
+    android:layout_height="match_parent" >
+
+    <FrameLayout 
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@drawable/shape_search"
+        android:layout_margin="10dp"
+        >
+        <EditText 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="请输入搜索内容"
+            android:background="@null"
+            android:padding="10dp"
+            android:id="@+id/etSearch"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            />
+       <ImageView 
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:src="@drawable/search"
+           android:layout_marginEnd="15dp"
+           android:id="@+id/ivSearch"
+           android:layout_gravity="right|center_vertical"
+           />
+       
+    </FrameLayout>
+      <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listview"
+        />
 
 </LinearLayout>
