--- a/res/layout/activity_new_goods.xml
+++ b/res/layout/activity_new_goods.xml
@@ -126,6 +126,8 @@
         android:background="@android:color/transparent"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
+        android:inputType="number"
+        android:hint="请输入价格"
         android:textSize="15sp" />
 
     <Button
