--- a/res/layout/widget_goods_detail.xml
+++ b/res/layout/widget_goods_detail.xml
@@ -1,156 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/text_item"
+                android:id="@+id/text_item"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="#1F5B8D"
+                android:gravity="center"
+                android:text="商品详情"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+    <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:background="#1F5B8D"
-        android:gravity="center"
-        android:text="商品详情"
-        android:textColor="@android:color/white"
-        android:textSize="20sp" />
-
-    <com.swqs.schooltrade.util.AvatarView
-        android:id="@+id/avatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/text_item"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp" />
-
-    <TextView
-        android:id="@+id/account_id"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_alignTop="@+id/avatar"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/avatar"
-        android:gravity="center"
-        android:text="发布人"
-        android:textColor="@android:color/black"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/fabuyu"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_alignBottom="@+id/avatar"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/avatar"
-        android:gravity="center"
-        android:text="发布于"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/content_createDate"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_alignBottom="@+id/avatar"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/fabuyu"
-        android:gravity="center"
-        android:text="yyyy-mm-dd"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/content_originalprice"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/avatar"
-        android:layout_marginRight="10dp"
-        android:gravity="center"
-        android:text="money"
-        android:textColor="#FF0000"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/renminbi"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignTop="@+id/avatar"
-        android:layout_marginRight="3dp"
-        android:layout_toLeftOf="@+id/content_originalprice"
-        android:gravity="center"
-        android:text="￥"
-        android:textColor="#FF0000"
-        android:textSize="10sp" />
-
-    <TextView
-        android:id="@+id/content_title"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/avatar"
-        android:layout_alignRight="@+id/content_originalprice"
-        android:layout_below="@+id/avatar"
-        android:layout_marginTop="5dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="标题"
-        android:textSize="15sp" />
+         >
 
-    <TextView
-        android:id="@+id/content_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/content_title"
-        android:layout_alignRight="@+id/content_title"
-        android:layout_below="@+id/content_title"
-        android:layout_marginTop="5dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="详情"
-        android:textSize="15sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-    <ImageView
-        android:id="@+id/image_goods"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_alignLeft="@+id/content_item"
-        android:layout_below="@+id/content_item"
-        android:layout_marginTop="5dp"
-        android:src="@android:drawable/alert_light_frame" />
+            
 
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/image_goods"
-        android:layout_marginTop="5dp"
-        android:background="@android:color/darker_gray" />
+            <com.swqs.schooltrade.util.RoundImageView
+                android:id="@+id/avatar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp" />
 
-    <TextView
-        android:id="@+id/content_comment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/content_item"
-        android:layout_alignRight="@+id/content_item"
-        android:layout_below="@+id/line"
-        android:layout_marginTop="5dp"
-        android:text="留言区"
-        android:textSize="15dp" />
+            <TextView
+                android:id="@+id/account_id"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_alignTop="@+id/avatar"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/avatar"
+                android:gravity="center"
+                android:text="发布人"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
 
-    <ListView
-        android:id="@+id/commentlist"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignLeft="@+id/content_comment"
-        android:layout_alignRight="@+id/content_comment"
-        android:layout_below="@+id/content_comment"
-        android:layout_marginBottom="55dp"
-        android:layout_marginTop="5dp"
-        tools:listitem="@layout/widget_comment_item" >
-    </ListView>
+            <TextView
+                android:id="@+id/fabuyu"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_alignBottom="@+id/avatar"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/avatar"
+                android:gravity="center"
+                android:text="发布于"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/content_createDate"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_alignBottom="@+id/avatar"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/fabuyu"
+                android:gravity="center"
+                android:text="yyyy-mm-dd"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/content_originalprice"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/avatar"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:text="money"
+                android:textColor="#FF0000"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/renminbi"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_alignTop="@+id/avatar"
+                android:layout_marginRight="3dp"
+                android:layout_toLeftOf="@+id/content_originalprice"
+                android:gravity="center"
+                android:text="￥"
+                android:textColor="#FF0000"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/content_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/avatar"
+                android:layout_alignRight="@+id/content_originalprice"
+                android:layout_below="@+id/avatar"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="标题"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/content_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/content_title"
+                android:layout_alignRight="@+id/content_title"
+                android:layout_below="@+id/content_title"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="详情"
+                android:textSize="15sp" />
+
+            <ListView
+                android:id="@+id/image_goods"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/content_item"
+                android:layout_below="@+id/content_item"
+                android:layout_marginTop="5dp" >
+            </ListView>
+
+            <View
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/image_goods"
+                android:layout_marginTop="5dp"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/content_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/content_item"
+                android:layout_alignRight="@+id/content_item"
+                android:layout_below="@+id/line"
+                android:layout_marginTop="5dp"
+                android:text="留言区"
+                android:textSize="15dp" />
+
+            <ListView
+                android:id="@+id/commentlist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignLeft="@+id/content_comment"
+                android:layout_alignRight="@+id/content_comment"
+                android:layout_below="@+id/content_comment"
+                android:layout_marginBottom="55dp"
+                android:layout_marginTop="5dp"
+                tools:listitem="@layout/widget_comment_item" >
+            </ListView>
+        </RelativeLayout>
+    </ScrollView>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -194,4 +211,4 @@
             android:textSize="15sp" />
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
