--- a/res/layout/widget_goods_detail.xml
+++ b/res/layout/widget_goods_detail.xml
@@ -186,7 +186,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/button_like"
+            android:id="@+id/btnChat"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
@@ -194,7 +194,7 @@
             android:layout_toRightOf="@+id/button_comment"
             android:background="@android:color/darker_gray"
             android:gravity="center"
-            android:text="点赞"
+            android:text="联系卖家"
             android:textSize="15sp" />
 
         <Button
