添加我发布的商品列表界面

--- a/res/layout/activity_mypublish.xml
+++ b/res/layout/activity_mypublish.xml
@@ -3,7 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+      <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="我发布的"
+            android:textColor="@android:color/white"
+            android:background="#1F5B8D"
+            android:textSize="20sp" />
  <ListView
         android:id="@+id/lvGoods"
         android:layout_width="match_parent"
